trabajando en la pagina, añadiendo blog, pero falta la seccion del blog

--- a/config.toml
+++ b/config.toml
@@ -4,6 +4,6 @@ title = "Nicolás Riquelme Guzmán"
 publicdir = "public"
 
 [params]
-    profesion = "Desarrollador Web"
+    profesion = "Historiador / Desarrollador Web / Ciclista"
     about = "Programador wanabe oriundo de Santiago de Chile."
     like = "Me apasiona aprender, comprender e integrar nuevos conocimientos."
