--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 baseURL = "//nrriquelmeg.cl/"
 languageCode = "en-us"
-title = "Nicolás Riquelme Guzmán"
+title = "Nicolás Rafael Riquelme Guzmán"
 publicdir = "public"
 
 [params]
